[gd_scene load_steps=27 format=3 uid="uid://dm0hcgoxikna"]

[ext_resource type="Script" path="res://Scripts/AICharacter.gd" id="1_e5clh"]
[ext_resource type="Texture2D" uid="uid://c1dkvqe4hnjyi" path="res://Assets/ThugSheet.png" id="2_06mf5"]
[ext_resource type="PackedScene" uid="uid://b5sfdp1pjqci4" path="res://Scenes/RandomChatter.tscn" id="2_cng4w"]
[ext_resource type="Texture2D" uid="uid://rnosgwkuh8mw" path="res://Assets/circle.png" id="4_xrnfa"]
[ext_resource type="Animation" uid="uid://bqsr6vdqs4rqo" path="res://Assets/Animations/HurtAnim.res" id="5_drh6b"]
[ext_resource type="Texture2D" uid="uid://dje2ph8gm6uib" path="res://Assets/attack.png" id="5_dv18d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi7wa"]
size = Vector2(40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr1cs"]
atlas = ExtResource("2_06mf5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i234c"]
atlas = ExtResource("2_06mf5")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ho0"]
atlas = ExtResource("2_06mf5")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuxew"]
atlas = ExtResource("2_06mf5")
region = Rect2(0, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1cfa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr1cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i234c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ho0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuxew")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kki8r"]
size = Vector2(72, 64)

[sub_resource type="Animation" id="Animation_3au1j"]
resource_name = "Attack0"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.141372, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/AttackArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/AttackArea/AttackSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/AttackArea/AttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-15, 31), Vector2(-33, -4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprites/AttackArea/AttackSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0174533, 0.745256]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodySprites/AttackArea/AttackSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.88, 0.12), Vector2(1.59, 0.345)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodySprites/AttackArea/AttackSprite:skew")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.644027, 0.340339]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodySprites/Body/LFoot:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.565487, 1.50796, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BodySprites/Body/LFoot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.341985, 3.54274), Vector2(-1.60657, 7.87418), Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BodySprites/Body/LFoot:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bhyrd"]
resource_name = "Attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.436332, -0.436332, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/AttackArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/AttackArea/AttackSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/AttackArea/AttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(12, -23), Vector2(-39, -16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprites/AttackArea/AttackSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -2.5412, -0.455531]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodySprites/AttackArea/AttackSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.88, -1.215), Vector2(1.59, 1.005)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodySprites/AttackArea/AttackSprite:skew")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.17112, -0.928515]
}

[sub_resource type="Animation" id="Animation_ij1jm"]
resource_name = "Attack2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.565487, -0.280998, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/AttackArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/AttackArea/AttackSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/AttackArea/AttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(17, -9), Vector2(-24.5, -2.89)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprites/AttackArea/AttackSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.91826, -0.314159]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodySprites/AttackArea/AttackSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.88, -1.215), Vector2(1.935, 1.005)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodySprites/AttackArea/AttackSprite:skew")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.17112, 0.113446]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodySprites/Body:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.79966, 6.28319]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BodySprites/Body:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(0, -15), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_77me8"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_43k4e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/Body/LFoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprites/Body/LFoot:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodySprites/Body/Head:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodySprites/AttackArea:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodySprites/AttackArea/AttackSprite:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BodySprites/AttackArea/AttackSprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BodySprites/AttackArea/AttackSprite:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("BodySprites/AttackArea/AttackSprite:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("BodySprites/AttackArea/AttackSprite:skew")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("BodySprites/Body/LFoot:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("BodySprites/Body/RFoot:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("BodySprites/Body/RFoot:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4l25e"]
resource_name = "Walking"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body/LFoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.151844, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, -8.19), Vector2(0, -3), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprites/Body/LFoot:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.282743, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodySprites/Body/RFoot:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodySprites/Body/RFoot:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdnni"]
_data = {
"Attack0": SubResource("Animation_3au1j"),
"Attack1": SubResource("Animation_bhyrd"),
"Attack2": SubResource("Animation_ij1jm"),
"Hurt": ExtResource("5_drh6b"),
"Idle": SubResource("Animation_77me8"),
"RESET": SubResource("Animation_43k4e"),
"Walking": SubResource("Animation_4l25e")
}

[sub_resource type="Animation" id="Animation_76hxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprites/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprites/Body/Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprites/Body/LFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.290987]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprites/Body/RFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.291888]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkiof"]
_data = {
"RESET": SubResource("Animation_76hxp")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m52b4"]
_data = {
"HurtAnim": ExtResource("5_drh6b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e0pp"]
size = Vector2(229, 104)

[sub_resource type="Curve" id="Curve_2ejos"]
min_value = 0.99
max_value = 25.0
_data = [Vector2(0, 9.43308), 0.0, 0.0, 0, 0, Vector2(0.370787, 21.8338), 0.0, 0.0, 0, 0, Vector2(1, 2.57308), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_1s3j1"]
offsets = PackedFloat32Array(0.0333333, 0.486667, 1)
colors = PackedColorArray(1, 0, 0.419608, 1, 1, 0.172549, 0, 1, 0.882353, 0.780392, 0, 0)

[node name="Thug" type="CharacterBody2D" node_paths=PackedStringArray("animPlayer", "specialAnimPlayer", "playerBody", "dieParticles")]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_e5clh")
animPlayer = NodePath("AnimationPlayer")
specialAnimPlayer = NodePath("SpecialPlayer")
playerBody = NodePath("BodySprites")
dieParticles = NodePath("DieParticle")
maxVelocity = 300.0
attackCount = 1

[node name="RandomChatter" parent="." instance=ExtResource("2_cng4w")]
position = Vector2(0, -67)
quotes = Array[String](["I didn't choose the thug life; the thug life chose me.", "I didn't choose the thug life; the thug life chose me... and then asked for a resume.", "I'm not a thug; I'm a hugs specialist.", "I'm a gangster on social media. My posts are straight fire!", "I'm so tough; I can open a bag of chips with one hand.", "I've got 99 problems, and they're all notifications on my phone.", "I'm not a gangster; I'm a gangsta-rapper. I rap about flowers and rainbows.", "I'm the kind of thug who returns shopping carts. No one messes with that kind of dangerous.", "I'm on a seafood diet. I see food, and I eat it... thug life.", "I'm not a criminal; I just accidentally wore a ski mask to the grocery store.", "I'm so gangster; I floss with barbed wire.", "I got a tattoo of a barcode. Thug life, but with a price tag.", "I don't break the law; I just bend it like Beckham.", "I'm the kind of thug who uses 'LOL' in real-life conversations.", "I'm on a stealth mission to find the last cookie in the jar.", "My rap sheet? It's more like a grocery list... of things I forgot to buy.", "I'm the reason Waldo is hiding.", "I walk into a room, and the WiFi connects automatically. Thug priorities.", "I'm so street, my GPS says 'You have reached your destination, bro.", "I got arrested for being too handsome. The mugshot was too good."])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_oi7wa")

[node name="BodySprites" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Body" type="AnimatedSprite2D" parent="BodySprites"]
position = Vector2(0, -3)
scale = Vector2(1.793, 1.148)
sprite_frames = SubResource("SpriteFrames_1cfa6")

[node name="Head" type="AnimatedSprite2D" parent="BodySprites/Body"]
sprite_frames = SubResource("SpriteFrames_1cfa6")
frame = 2

[node name="LFoot" type="AnimatedSprite2D" parent="BodySprites/Body"]
rotation = -0.290987
sprite_frames = SubResource("SpriteFrames_1cfa6")
frame = 3

[node name="RFoot" type="AnimatedSprite2D" parent="BodySprites/Body"]
rotation = -0.291888
sprite_frames = SubResource("SpriteFrames_1cfa6")
frame = 1

[node name="Shadow" type="Sprite2D" parent="BodySprites"]
self_modulate = Color(0.0823529, 0.0823529, 0.0823529, 0.368627)
z_index = -1
position = Vector2(2, 34)
rotation = 1.5708
scale = Vector2(0.18242, 0.651971)
texture = ExtResource("4_xrnfa")

[node name="AttackArea" type="Area2D" parent="BodySprites"]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodySprites/AttackArea"]
position = Vector2(-36, 0)
shape = SubResource("RectangleShape2D_kki8r")

[node name="AttackSprite" type="Sprite2D" parent="BodySprites/AttackArea"]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("5_dv18d")

[node name="AttackSprites" type="Node2D" parent="BodySprites"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kdnni")
}

[node name="SpecialPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fkiof"),
"global": SubResource("AnimationLibrary_m52b4")
}

[node name="AgroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_6e0pp")

[node name="DieParticle" type="CPUParticles2D" parent="."]
process_mode = 3
emitting = false
amount = 64
one_shot = true
explosiveness = 0.89
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 46.25
direction = Vector2(0, 1)
spread = 180.0
gravity = Vector2(0, 0)
angular_velocity_min = -145.45
angular_velocity_max = 130.91
angle_min = -87.3
angle_max = 101.8
scale_amount_curve = SubResource("Curve_2ejos")
color_initial_ramp = SubResource("Gradient_1s3j1")

[connection signal="body_entered" from="BodySprites/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AgroArea" to="." method="_on_agro_area_body_entered"]
[connection signal="body_exited" from="AgroArea" to="." method="_on_agro_area_body_exited"]
[connection signal="finished" from="DieParticle" to="." method="_on_die_particle_finished"]
